Fixed bug #31174 (compile warning in url.c).